<resources>
    <string name="app_name">In Class 2a</string>
    <string name="inches">Inches:</string>
    <string name="result">Result:</string>
    <string name="meters">To Meters</string>
    <string name="feet">To Feet</string>
    <string name="miles">To Miles</string>
    <string name="clearAll">Clear All</string>
    <string name="enterValue">Enter Inch Value</string>
    <string name="specialCharacters">Inch value cannot be a special character</string>
    <string name="empty">Inch value cannot be empty</string>
</resources>